// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rotation test Should create rotation with participants 1`] = `
Object {
  "__v": 0,
  "_id": "6300ec762ccc9950076e3966",
  "createdAt": 2022-08-20T14:15:18.426Z,
  "duty": Array [
    Object {
      "endDate": 2022-08-25T03:00:00.000Z,
      "startDate": 2022-08-20T03:00:00.000Z,
      "userId": "1",
    },
    Object {
      "endDate": 2022-08-30T03:00:00.000Z,
      "startDate": 2022-08-25T03:00:00.000Z,
      "userId": "2",
    },
  ],
  "length": "5 days",
  "name": "Support",
  "responsible": Array [
    "1",
    "2",
    "3",
  ],
  "updatedAt": 2022-08-20T14:15:18.425Z,
}
`;

exports[`Rotation test Should rotate participants 1`] = `
Object {
  "__v": 0,
  "_id": "6300ec762ccc9950076e3968",
  "createdAt": 2022-08-20T14:15:18.501Z,
  "duty": Array [
    Object {
      "endDate": 2022-08-19T14:15:18.495Z,
      "startDate": 2022-08-14T14:15:18.495Z,
      "userId": "1",
    },
    Object {
      "endDate": 2022-08-24T14:15:18.495Z,
      "startDate": 2022-08-19T14:15:18.495Z,
      "userId": "2",
    },
  ],
  "length": "5 days",
  "name": "Fake",
  "responsible": Array [
    "1",
    "2",
    "3",
  ],
  "updatedAt": 2022-08-20T14:15:18.501Z,
}
`;

exports[`Rotation test Should rotate participants 2`] = `
Object {
  "__v": 0,
  "_id": "6300ec762ccc9950076e3968",
  "createdAt": 2022-08-20T14:15:18.501Z,
  "duty": Array [
    Object {
      "endDate": 2022-08-24T14:15:18.495Z,
      "startDate": 2022-08-19T14:15:18.495Z,
      "userId": "2",
    },
    Object {
      "endDate": 2022-08-29T14:15:18.495Z,
      "startDate": 2022-08-24T14:15:18.495Z,
      "userId": "3",
    },
  ],
  "length": "5 days",
  "name": "Fake",
  "responsible": Array [
    "1",
    "2",
    "3",
  ],
  "updatedAt": 2022-08-20T14:15:18.556Z,
}
`;

exports[`Rotation test Should rotate participants and begin again 1`] = `
Object {
  "__v": 0,
  "_id": "6300ec762ccc9950076e396e",
  "createdAt": 2022-08-20T14:15:18.608Z,
  "duty": Array [
    Object {
      "endDate": 2022-08-19T14:15:18.603Z,
      "startDate": 2022-08-14T14:15:18.603Z,
      "userId": "3",
    },
    Object {
      "endDate": 2022-08-24T14:15:18.603Z,
      "startDate": 2022-08-19T14:15:18.603Z,
      "userId": "1",
    },
  ],
  "length": "5 days",
  "name": "Fake",
  "responsible": Array [
    "1",
    "2",
    "3",
  ],
  "updatedAt": 2022-08-20T14:15:18.607Z,
}
`;

exports[`Rotation test Should rotate participants and begin again 2`] = `
Object {
  "__v": 0,
  "_id": "6300ec762ccc9950076e396e",
  "createdAt": 2022-08-20T14:15:18.608Z,
  "duty": Array [
    Object {
      "endDate": 2022-08-24T14:15:18.603Z,
      "startDate": 2022-08-19T14:15:18.603Z,
      "userId": "1",
    },
    Object {
      "endDate": 2022-08-29T14:15:18.603Z,
      "startDate": 2022-08-24T14:15:18.603Z,
      "userId": "2",
    },
  ],
  "length": "5 days",
  "name": "Fake",
  "responsible": Array [
    "1",
    "2",
    "3",
  ],
  "updatedAt": 2022-08-20T14:15:18.635Z,
}
`;
